# patch_madness

./: pyproject.toml
patch_madness/config/: config.py
patch_madness/lib/: lib_thing.py
patch_madness/lib/my_lib/: __init__.py
patch_madness/tests/: test.py
